# noaa

./: config.py  main_cum_rainfall.py  noaa_api.py  plotting.py  pyproject.toml  rainfall.py
tests/: confttest.py  counts.py  test_integration_noaa_api.py  test_noaa_api.py  test_noaa_api_full_coverage.py  test_plotting.py  test_plotting_rain_days.py  test_rainfall.py  test_rainfall_count_days.py  test_rainfall_cum_rain_days.py
