[tool.poetry]
name = "noaa"
version = "1.0"
description = "Queries and plots of NOAA weather database"
authors = ["Roger Chylla <roger.chylla@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
requests-mock = "^1.12.1"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.poetry.scripts]
noaa-cum = "main_cum_rainfall:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
